--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="index.css">
     <title>NAVIGATION</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
