--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=600px, initial-scale=1.0">
 
 <link rel="stylesheet" href="index.css">
     <title>NAVIGATION</title>
